app/board-app/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: board-app
  labels:
    app: board-app
